TestCases/Errors/range_value/observations/win_03_obs.spm
 obs   14-6   0.0012670329358426 
 obs   15-6   0.0013237244461076 
 obs   16-6   0.000528141135616515 
 obs   13-7   0.000532336381640944 
 obs   14-7   0.00105901524531225 
 obs   15-7   0.00111688084444935 
 obs   16-7   0.000792487013968685 
 obs   13-8   0.000391873893417895 
 obs   14-8   0.000957678960619229 
 obs   15-8   0.000422350824067341 
 obs   6-9   0.0032478077297824 
 obs   13-9   0 
 obs   14-9   0 
 obs   4-11   0.00156372165754496 
 obs   5-11   0.00151365381418614 
 obs   6-11   0.00150678051230537 
 obs   3-12   0.0121317157712305 
 obs   4-12   0.0171017448363331 
 obs   5-12   0.00146842878120411 
 obs   3-13   0.0120063191153239 
 obs   4-13   0.0177400305227599 
 obs   4-14   0.0456737588652482 
 obs   5-14   0.0533065583862508 
 obs   5-15   0.0616925942341159 
 obs   6-15   0.050964458967519 
 obs   5-16   0.0533700819733144 
 obs   6-16   0.0635403807194674 
 obs   6-17   0.0810243504231048 
 obs   7-17   0.0334949280154456 
 obs   8-17   0.0381840048105833 
 obs   1-18   0.0467964390823458 
 obs   2-18   0.0291191059717728 
 obs   3-18   0.00568942436412316 
 obs   4-18   0.00522042344763943 
 obs   7-18   0.0260575296108291 
 obs   1-19   0.0605182580236367 
 obs   2-19   0.0342166195009004 
 obs   4-19   0.00628711142158575 
 obs   2-20   0.00876696832579186 
 obs   3-20   0.0104793931306553 
 obs   4-20   0.0164621370847052 
 obs   1-23   0.0243831640058055 
 obs   2-23   0.0416218155723 
 obs   1-24   0.0313642873169124 
 obs   3-24   0.0105298353998583 
 obs   1-25   0.0326332050850744 
 error_value   14-6   0 
 error_value   15-6   0 
 error_value   16-6   0 
 error_value   13-7   0 
 error_value   14-7   0 
 error_value   15-7   0 
 error_value   16-7   0 
 error_value   13-8   0 
 error_value   14-8   0 
 error_value   15-8   0 
 error_value   6-9   0 
 error_value   13-9   0 
 error_value   14-9   0 
 error_value   4-11   0 
 error_value   5-11   0 
 error_value   6-11   0 
 error_value   3-12   0 
 error_value   4-12   0 
 error_value   5-12   0 
 error_value   3-13   0 
 error_value   4-13   0 
 error_value   4-14   0 
 error_value   5-14   0 
 error_value   5-15   0 
 error_value   6-15   0 
 error_value   5-16   0 
 error_value   6-16   0 
 error_value   6-17   0 
 error_value   7-17   0 
 error_value   8-17   0 
 error_value   1-18   0 
 error_value   2-18   0 
 error_value   3-18   0 
 error_value   4-18   0 
 error_value   7-18   0 
 error_value   1-19   0 
 error_value   2-19   0 
 error_value   4-19   0 
 error_value   2-20   0 
 error_value   3-20   0 
 error_value   4-20   0 
 error_value   1-23   0 
 error_value   2-23   0 
 error_value   1-24   0 
 error_value   3-24   0 
 error_value   1-25   0 
